--- a/day_5_Layout2.html
+++ b/day_5_Layout2.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lauout 2</title>
     <style>
-            /* *{font-size:22px;font-weight:bold;}
+            *{font-size:22px;font-weight:bold;}
 			#R1{background-color:gray;height:70px;width:100%;margin-bottom:10px;}
 			#R1 div{float:left;height:40px;padding-top:15px;text-align:center}
 			#B1{padding-left:2%;width:48%;}
@@ -17,33 +17,8 @@
 			#C2{width:33%;margin-right:2%;text-align:center;}
 			#C3{width:30%;text-align:center;}
 			#R4 div{float:left;height:300px;padding-top:300px;background-color:gray;}
-			#R5{background-color:gray;height:35px;width:100%;padding-top:5px;text-align:center;margin-bottom:10px;} */
-            *{
-                font-size: 22px;
-                font-weight: bold;
-            }
-            #R1
-            {
-                background-color: gray;
-                height: 70px;
-                width: 100%;
-                margin-bottom:10px;
-            }
-            #R1 div{
-                padding-left: 20px;
-                float: left;
-                height: 40px;
-                padding-top: 15px;
-                text-align: center;
-            }
-            #B1{
-                padding-left: 2%;
-                width: 48%;
-            }
-            #B2{
-                padding-right: 2%;
-                width: 48%;
-            }
+			#R5{background-color:gray;height:35px;width:100%;padding-top:5px;text-align:center;margin-bottom:10px;}
+        
     </style>
 </head>
 <body>
